--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "node-onvif-ts",
-  "version": "0.1.7",
-  "description": "typescript version of node-onvif",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/renato-machado-atman/node-onvif-ts.git"
-  },
+  "name": "@atmanadmin/node-onvif-ts",
+  "version": "0.1.8",
+  "description": "Ferramenta para auxiliar na comunicação com dispositivos ONVIF",
   "main": "dist/node-onvif/index.js",
+  "types": "dist/node-onvif/index.d.ts",
   "files": [
     "dist/node-onvif/**/*"
   ],
@@ -14,7 +11,30 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atmanadmin/node-onvif-ts.git"
+  },
+  "readmeFilename": "README.md",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "keywords": [
+    "ONVIF",
+    "Camera",
+    "IP Camera",
+    "Network Camera",
+    "Security Camera"
+  ],
+  "bugs": {
+    "url": "https://github.com/atmanadmin/node-onvif-ts/issues"
+  },
+  "homepage": "https://github.com/atmanadmin/node-onvif-ts#readme",
   "license": "MIT",
+  "dependencies": {
+    "html": "^1.0.0",
+    "xml2js": "^0.4.23"
+  },
   "devDependencies": {
     "@types/html": "^1.0.0",
     "@types/xml2js": "^0.4.5",
@@ -22,11 +42,6 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.6"
-  },
-  "types": "dist/node-onvif/index.d.ts",
-  "dependencies": {
-    "html": "^1.0.0",
-    "xml2js": "^0.4.23"
   },
   "contributors": [
     {
